Updated last paper intro a bit.

--- a/paper1.tex
+++ b/paper1.tex
@@ -37,20 +37,16 @@ the rotating core to actually split rather than just deform
 \citep{Tohline2001}. Both core and disk fragmentation are still
 thought to be viable binary formation mechanisms. It is likely that
 both mechanisms play a role in shaping the binary mass-ratio and
-separation distributions. In the formation of higher-order multiples, it is even possible that both mechanisms operate in the same system.
+separation distributions. In the formation of higher-order multiples, it is very possible that both mechanisms operate.
 
-The primary method of forming binary systems is thought to be core fragmentation. As a molecular cloud
-begins isothermally collapsing, its density increases, causing the
+The primary method of forming binary systems is thought to be core fragmentation. As a molecular cloud begins isothermally collapsing, its density increases, causing the
 Jeans mass to decrease. Thus, an initially Jeans-mass collapsing core
 can fragment into smaller objects. Core fragmentation will initially yield binaries with separations
 $10 AU < a < 1000 AU$, which may move closer by interacting
 with the surrounding gas, a circumbinary disk, or through dynamical
-interactions with other nearby stars \citep{BBB2002}. For $\sim 1
-M_{\odot}$ primary stars, the observed mass-ratio distribution is well fit by assuming
-both components of the binary are chosen randomly from the stellar
-initial mass function, and later evolve through
-accretion and dynamical interactions \citep{Kroupa2003}. Assuming
-independent component masses chosen from the IMF, a binary with a $10 M_{\odot}$ primary would
+interactions with other nearby stars \citep{BBB2002}. Assuming
+independent component masses chosen from the initial mass function (IMF), 
+a binary with a $10 M_{\odot}$ primary would
 most often have a $0.1 M_{\odot}$ secondary, giving an initial mass
 ratio near $q=0.01$. The unmodified mass-ratio distribution of
 high-mass binaries would therefore strongly favor low mass
@@ -68,12 +64,11 @@ Another potentially important way to form binary systems is disk instability
 this scenario, the fragment forms in an unstable circumstellar disk
 with an initial separation of $\sim 100 AU$ and initial mass-ratios
 near $q \sim 0.03$, similar to the core fragmentation case
-\citep{Kratter2006}. The final mass-ratio is expected to rise, but not
-as significantly as in the core fragmentation scenario in which the
-fragment can form sooner. Typical mass-ratios near $q \sim 0.1$ are expected, though the picture is far from complete. 
-A semi-analytical treatment of embedded protostellar disks by
-\cite{Kratter2008} finds that massive stars with $M > 2M_{\odot}$ maintain $0.01 - 0.1
-M_{\odot}$ in orbiting fragments after about 2 Myr. \cite{Krumholz2007}
+\citep{Kratter2006}. The final mass-ratio is expected to rise due to accretion, but the
+amount of mass the companion accretes depends on when it forms. Companions that form very
+early can accrete a significant amount of mass, driving the mass ratio towards unity. In contrast,
+a companion that forms late will not have as much time to accrete mass from the disk before it
+dissipates, and so the final mass ratio will be smaller. The more specific theoretical predictions of disk fragmentation companion evolution is far from resolved. A semi-analytical treatment of embedded protostellar disks by \cite{Kratter2008} finds that massive stars with $M > 2M_{\odot}$ maintain $0.01 - 0.1 M_{\odot}$ in orbiting fragments after about 2 Myr. \cite{Krumholz2007}
 simulate a $100 M_{\odot}$ collapsing core for a much shorter time (20 kyr),
 but also find that the disk fragments and that the final fragment mass
 ratio is $q \approx 0.1$. However, \cite{Krumholz2009} simulate the same mass core
@@ -92,11 +87,11 @@ would not undergo significant accretion or migration and would leave a
 wide binary ($a \approx 100 AU$) with mass-ratio in the range $0.1 < q <
 0.5$.
 
-Unfortunately, there are no true binary population synthethis
+Unfortunately, there are no true binary population synthesis
 simulations for high-mass binary systems formed by either mechanism
-discussed above. The lack of population synthethis models is driven
+discussed above. The lack of population synthesis models is driven
 by computational issues; a collapsing
-cloud that reproduces the stellar mass function \emph{and} generates
+cloud that reproduces the stellar IMF \emph{and} generates
 enough high-mass stars to meaningfully analyze the binary statistics
 would have to be very massive and therefore difficult to
 simulate. Disk fragmentation simulations often either stop the
