--- a/paper2.tex
+++ b/paper2.tex
@@ -43,11 +43,8 @@ In this chapter, we investigate a technique to detect the spectrum from an appro
 \section{Instrument and Methodology}
 \label{paper2_sec:method}
 The IGRINS instrument is explained in detail in \cite{IGRINS}. IGRINS
-is an immersion grating echelle spectrograph, and will
-be capable of observing the entire H (1.4-1.8 $\mu m$) and K (2.0-2.4 $\mu m$) spectral windows at once,
-with a resolution of $R=\lambda / \Delta \lambda = 40000$. IGRINS is
-scheduled to see first light on the 2.7-meter Harlan J Smith telescope at McDonald
-Observatory in late 2013.
+is an immersion grating echelle spectrograph, and is capable of observing the entire H (1.4-1.8 $\mu m$) and K (2.0-2.4 $\mu m$) spectral windows at once,
+with a resolution of $R=\lambda / \Delta \lambda \sim 40000$. IGRINS was commissioned on the 2.7-meter Harlan J Smith telescope at McDonald Observatory in the spring of 2014, about 1 year after this chapter was originally published.
 
 We make several assumptions and simplifications in this work. We
 ignore any \emph{instrumental} effects that may introduce systematic noise, although we do introduce systematic noise in the form of telluric contamination. We also ignore any light reflected from the star, since it contributes little to the total planet brightness in the H and K bands. Finally, we assume the IGRINS detector has equal sensitivity to all wavelengths of light, so the signal-to-noise ratio is set only by the light from the target.
