--- a/paper6.tex
+++ b/paper6.tex
@@ -2,7 +2,7 @@
 \chapter{The Inner Mass-Ratio Distribution of Intermediate-Mass Stars}
 \label{chap:survey}
 
-Finally, we use the direct spectral detection method to perform a large survey aimed at detected cool companions to hot A- and B-type stars. This chapter has been submitted for publication to the Astronomical Journal.
+Finally, we use the direct spectral detection method to perform a large survey aimed at detecting cool companions to hot A- and B-type stars. This chapter has been submitted for publication to the Astronomical Journal, but is not yet published.
 
 
 
