Updated introduction with some proofreading edits.

--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -64,9 +64,11 @@
 
 Stellar multiplicity is an inevitable and common outcome of star formation, with roughly half of all solar-type field stars in binary or multiple systems \citep{Raghavan2010} and an even higher fraction as the stellar mass increases \citep{Zinnecker2007}. Young stellar associations and clusters tend to have even higher multiplicity \citep{Duchene2013}, indicating that stars often form in multiple systems that are subsequently destroyed by dynamical interactions as the cluster dissociates. 
 
-The overall multiplicity rate and the distributions of mass ratio, period, and eccentricity of a binary star population place important constraints on the mode of binary star formation. While the period and eccentricity are altered by dynamical processing in the birth cluster, the present-day mass ratio of a binary system is a direct result of its formation \citep{Parker2013}. Most binary stars are thought to form via core fragmentation \citep{Boss1979, Boss1986, Bate1995}, in which a collapsing core fragments into two or more individual protostars. The number and initial masses of the fragments are set by the total core mass, as well as its rotation, turbulence, and its temperature and density structure. If the fragments are well separated ($a \gtrsim 1000$ AU), they will evolve independently of each other, accreting mass from the core material onto their own protostellar disks and then onto the protostars themselves. However, close fragments ($a \sim 100$ AU) will interact with each other; the protostellar disk may be truncated, destabilized, or form into a circumbinary disk if the separation is small enough \citep{Bate1997}. In addition, an unstable disk can fragment to form low-mass companions \citep{Kratter2006, Stamatellos2011}. The mass ratios of close companions formed via either mechanism should be affected by preferential accretion. Most work has suggested that the disk material will preferentially accrete onto the lower mass companion as it migrates inward \citep{Bate1997, BBB2002}.
+The overall multiplicity rate and the distributions of mass ratio, period, and eccentricity of a binary star population place important constraints on the mode of binary star formation. While the period and eccentricity are altered by dynamical processing in the birth cluster, the present-day mass ratio of a binary system is a direct result of its formation \citep{Parker2013}. Most binary stars are thought to form via core fragmentation \citep{Boss1979, Boss1986, Bate1995}, in which a collapsing core fragments into two or more individual protostars. The number and initial masses of the fragments are set by the total core mass, as well as its rotation, turbulence, and its temperature and density structure. \citet{Machida2008} performed a parameter study by simulating several collapsing clouds with different levels of thermal, rotational, and magnetic energies. They found that the initial fragments occur on wide separations ($a \gtrsim 3 AU$) if the rotational energy dominates that of the magnetic field. If the magnetic energy dominates, however, then the fragmentation occurs much later and generates very close binary systems ($a \lesssim 1 AU$). 
 
-Intermediate-mass stars have recently seen a revival of interest as potentially young planet hosts, spurred largely by the detection of planets orbiting nearby \mbox{$\sim2 M_{\odot}$} stars on both wide \citep[e.g.][]{Lagrange2010, Marois2008} and close \citep{Johnson2011} orbits. Since the main sequence lifetime of an A- or B-type star is tens to hundreds of Myrs, a planetary companion would still be bright and easier to detect with direct imaging techniques [CITE] than the same companion orbiting an old, solar-type star. Robust age estimates for nearby intermediate-mass stars are therefore very important to convert the companion brightness into a mass estimate. 
+\citet{Machida2008} do not follow the accretion or migration evolution of the fragments, but we can estimate that evolution from the relevant physics: If the fragments are well separated ($a \gtrsim 1000$ AU), they will evolve independently of each other, accreting mass from the core material onto their own protostellar disks and then onto the protostars themselves.  However, close fragments ($a \sim 100$ AU) will interact with each other; the protostellar disk may be truncated, destabilized, or form into a circumbinary disk if the separation is small enough \citep{Bate1997}. In addition, an unstable disk can fragment to form low-mass close companions \citep{Kratter2006, Stamatellos2011} directly. The mass ratios of close companions formed via either mechanism should be affected by preferential accretion. Most work has suggested that the disk material and high angular momentum infalling core material will preferentially accrete onto the lower mass companion as it migrates inward \citep{Bate1997, BBB2002}, although some recent work has suggested the preferential accretion may go in the opposite direction as a result of magnetic disk braking \citep{Zhao2013}.
+
+Beyond informing star formation models, intermediate-mass stars have recently seen a revival of interest as potential young planet hosts, spurred largely by the detection of planets orbiting nearby \mbox{$\sim2 M_{\odot}$} stars on both wide \citep[e.g.][]{Lagrange2010, Marois2008} and close \citep{Johnson2011} orbits. Since the main sequence lifetime of an A- or B-type star is tens to hundreds of Myrs, a planetary companion would still be bright and easier to detect with direct imaging techniques than the same companion orbiting an old, solar-type star \citep{Marley2007}. Robust age estimates for nearby intermediate-mass stars are therefore very important to provide a vetted sample of young systems to search, and to convert the companion brightness into a mass estimate. 
 
 In the context of planetary companions, stellar-mass binary companions are contaminants; companions complicate radial velocity planet searches because they necessitate simultaneous modeling of both stellar motions \citep[e.g.][]{Bergmann2015}. Likewise, companions complicate direct imaging planet searches by requiring either extremely high-contrast instrumentation \citep{Thalmann2014} or specialized coronagraphs \citep{Crepp2010}. 
 
@@ -74,13 +76,17 @@ However, known binary stars are typically avoided in planet search programs for 
 
 \section{Detection Methods}
 
-There are three main main methods traditionally used to search for companions to stars, whether they be stellar or planetary companions. The first is direct imaging, in which we take an image of the star and look for nearby point sources in the image. This can be either seeing-limited, in which case it is difficult to find companions inside $1''$ of the primary, or with adaptive optics systems on large-aperture telescopes. We can detect companions out to a few hundred mas from the primary with adaptive optics imaging methods \citep[see][for typical sensitivity curves]{DeRosa2014}, and even closer with more time-consuming and complicated observational techniques such as angular differential imaging [CITE]. 
+There are three methods traditionally used to search for companions to stars, whether they be stellar or planetary companions. The first is direct imaging, in which we take an image of the star and look for nearby point sources in the image. This can be either seeing-limited, in which case it is difficult to find companions inside $1''$ of the primary, or with adaptive optics systems on large-aperture telescopes, in which case the inner working angle is near the diffraction limit of the telescope. We can detect companions out to a few hundred mas from the primary with adaptive optics imaging methods \citep[see][for typical sensitivity curves of a binary survey]{DeRosa2014}, and even closer with more time-consuming and complicated observational techniques such as angular differential imaging \citep{Marois2006}. 
 
-The second detection method is interferometry, in which multiple multiple beams of light from the source are allowed to constructively or destructively interfere with each other before recording the light. In some cases, interferometry is done with multiple telescopes separated by several tens of meters, producing an effective aperture much larger than can be produced as a single mirror. In other cases, a mask is introduced in front of a single telescope to only allow light from certain beams through. Interferometry can usually achieve smaller working angles than imaging, but cannot achieve as high contrast \citep[see e.g.][]{Aldoretta2015}.
+The second detection method is interferometry, in which multiple beams of light from the source are allowed to constructively or destructively interfere with each other before recording the light. In some cases, interferometry is done with multiple telescopes separated by several tens of meters, producing an effective aperture much larger than can be produced as a single mirror. In other cases, a mask is introduced in front of a single telescope to only allow light from certain beams through \citep[aperture masking,][]{Tuthill2000, Ireland2008}. Interferometry can usually achieve smaller working angles than imaging, but cannot achieve as high contrast \citep[see e.g.][]{Aldoretta2015}.
 
-The final traditional method useful in searching for stellar companions is radial velocity monitoring, in which the radial velocity of the star is measured many times over periods of years to decades. An unseen companion will cause the radial velocity of the primary star to oscillate. Unlike the previous two methods, the radial velocity method has no inner working angle; in fact, it works best at finding very close companions. The sensitivity falls off as the companion orbital separation increases, because the signal induced on the primary star decreases. The sensitivity also falls off as the number of spectral lines in the primary star spectrum falls, and as it rotation speed ($v\sin{i}$) increases. Careful radial velocity monitoring surveys are capable of detecting motion as small as $\sim 1 \mathrm{m\ s}^{-1}$ when observing slowly rotating solar-type stars \citep[e.g.][]{Wittenmyer2006, Fischer2009, Pepe2011}, but have difficulty achieving better than $\sim 1 \mathrm{km\ s}^{-1}$ when observing rapidly rotating hot stars [CITE].
+The final traditional method useful in searching for stellar companions is radial velocity monitoring, in which the radial velocity of the star is measured many times over periods of years to decades. An unseen companion will cause the radial velocity of the primary star to oscillate. Unlike the previous two methods, the radial velocity method has no inner working angle; in fact, it works best at finding very close companions. The sensitivity falls off as the companion orbital separation increases, because the signal induced on the primary star decreases. The sensitivity also falls off as the number of spectral lines in the primary star spectrum falls, and as it rotation speed ($v\sin{i}$) increases. Careful radial velocity monitoring surveys are capable of detecting motion as small as $\sim 1 \mathrm{m\ s}^{-1}$ when observing slowly rotating solar-type stars \citep[e.g.][]{Wittenmyer2006, Fischer2009, Pepe2011}, but have difficulty achieving better than $\sim 1 \mathrm{km\ s}^{-1}$ when observing rapidly rotating hot stars \citep{Becker2015}.
 
-Both imaging and interferometry can usually characterize the companion in a single image, provided the primary star parameters are sufficiently well-known. However, radial velocity monitoring is usually only capable of measuring the the minimum mass of the companion ($M_2\sin{i}$), and only after monitoring the system for $1-2$ orbital periods. For companions on long-period ($\sim 10$ years) orbits, it is an extremely time-consuming method. In Chapter \ref{chap:dsd}, we introduce a spectroscopic method that is capable of both detecting and characterizing close companions in single observations.
+Both imaging and interferometry can usually characterize the companion in a single image, provided the primary star parameters are sufficiently well-known. However, radial velocity monitoring is typically only capable of measuring the mass function of the binary system:
+\begin{equation}
+ f(M_1, M_2) = \frac{(M_2\sin{i})^3}{(M_1+M_2)^3}
+ \end{equation}
+ and only after monitoring the system for $1-2$ orbital periods. For companions on long-period ($\sim 10$ years) orbits, it is an extremely time-consuming method. In Chapter \ref{chap:dsd}, we introduce a spectroscopic method that is capable of both detecting and characterizing close companions in single observations.
 
 
 \section{Previous Observational Results}
@@ -89,7 +95,7 @@ The mass ratio, period, and eccentricity distributions are fairly well-known for
 
 Nonetheless, \citet{DeRosa2014} performed an adaptive optics imaging survey of nearby A-type stars, and found that the mass-ratio distribution is well-described by a power law with large slope, indicating a very strong preference for low-mass companions. They also found initial evidence that the mass-ratio distribution for companions inside $125$ AU has a much shallower power law slope than that of wide companions, and is consistent with flat. Their close companion subsample contained only 18 binary systems, and the result is complicated by the inherent difficulty of detecting close companions with low mass ratios in an imaging survey. 
 
-Radial velocity monitoring surveys can detect much closer companions than imaging surveys, but are typically only complete to low-mass companions if the primary is a slow rotator. Chemically peculiar Am stars are typically associated with binary companions, and are slow rotators due to tidal braking; they thus form a highly biased sample of intermediate-mass stars. Nonetheless, it is interesting to note that they have a mass-ratio distribution which peaks near $q \sim 0.5$ \citep{Vuissoz2004}, an entirely different form than the distribution found around chemically normal stars at wide separations.
+Radial velocity monitoring surveys can detect much closer companions than imaging surveys, but are typically only complete to low-mass companions if the primary is a slow rotator. Chemically peculiar Am stars are typically slow rotators, a fact typically attributed to tidal braking from binary companions; they thus form a highly biased sample of intermediate-mass stars. Nonetheless, it is interesting to note that they have a mass-ratio distribution which peaks near $q \sim 0.5$ \citep{Vuissoz2004}, an entirely different form than the power law distribution found around chemically normal stars at wide separations.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
