--- a/references.bib
+++ b/references.bib
@@ -4380,6 +4380,116 @@ archivePrefix = "arXiv",
 }
 
 
+@ARTICLE{Machida2008,
+   author = {{Machida}, M.~N. and {Tomisaka}, K. and {Matsumoto}, T. and 
+	{Inutsuka}, S.-i.},
+    title = "{Formation Scenario for Wide and Close Binary Systems}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0709.2739},
+ keywords = {binaries: general, ISM: clouds, ISM: magnetic fields, MHD, stars: formation, stars: rotation },
+     year = 2008,
+    month = apr,
+   volume = 677,
+      eid = {327-347},
+    pages = {327-347},
+      doi = {10.1086/529133},
+   adsurl = {http://adsabs.harvard.edu/abs/2008ApJ...677..327M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Marley2007,
+   author = {{Marley}, M.~S. and {Fortney}, J.~J. and {Hubickyj}, O. and 
+	{Bodenheimer}, P. and {Lissauer}, J.~J.},
+    title = "{On the Luminosity of Young Jupiters}",
+  journal = {\apj},
+   eprint = {astro-ph/0609739},
+ keywords = {Stars: Planetary Systems: Formation, Planets and Satellites: Formation},
+     year = 2007,
+    month = jan,
+   volume = 655,
+    pages = {541-549},
+      doi = {10.1086/509759},
+   adsurl = {http://adsabs.harvard.edu/abs/2007ApJ...655..541M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Marois2006,
+   author = {{Marois}, C. and {Lafreni{\`e}re}, D. and {Doyon}, R. and {Macintosh}, B. and 
+	{Nadeau}, D.},
+    title = "{Angular Differential Imaging: A Powerful High-Contrast Imaging Technique}",
+  journal = {\apj},
+   eprint = {astro-ph/0512335},
+ keywords = {Instrumentation: Adaptive Optics, Stars: Planetary Systems, Stars: Imaging},
+     year = 2006,
+    month = apr,
+   volume = 641,
+    pages = {556-564},
+      doi = {10.1086/500401},
+   adsurl = {http://adsabs.harvard.edu/abs/2006ApJ...641..556M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@INPROCEEDINGS{Tuthill2000,
+   author = {{Tuthill}, P.~G. and {Monnier}, J.~D. and {Danchi}, W.~C.},
+    title = "{Aperture masking interferometry on the Keck I Telescope: new results from the diffraction limit}",
+booktitle = {Interferometry in Optical Astronomy},
+     year = 2000,
+   series = {\procspie},
+   volume = 4006,
+   editor = {{L{\'e}na}, P. and {Quirrenbach}, A.},
+    month = jul,
+    pages = {491-498},
+   adsurl = {http://adsabs.harvard.edu/abs/2000SPIE.4006..491T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Ireland2008,
+   author = {{Ireland}, M.~J. and {Kraus}, A. and {Martinache}, F. and {Lloyd}, J.~P. and 
+	{Tuthill}, P.~G.},
+    title = "{Dynamical Mass of GJ 802B: A Brown Dwarf in a Triple System}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0801.1525},
+ keywords = {stars: low-mass, brown dwarfs },
+     year = 2008,
+    month = may,
+   volume = 678,
+      eid = {463-471},
+    pages = {463-471},
+      doi = {10.1086/529578},
+   adsurl = {http://adsabs.harvard.edu/abs/2008ApJ...678..463I},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Becker2015,
+   author = {{Becker}, J.~C. and {Johnson}, J.~A. and {Vanderburg}, A. and 
+	{Morton}, T.~D.},
+    title = "{Extracting Radial Velocities of A- and B-type Stars from Echelle Spectrograph Calibration Spectra}",
+  journal = {\apjs},
+archivePrefix = "arXiv",
+   eprint = {1503.03874},
+ primaryClass = "astro-ph.SR",
+ keywords = {binaries: general, methods: data analysis, techniques: radial velocities},
+     year = 2015,
+    month = apr,
+   volume = 217,
+      eid = {29},
+    pages = {29},
+      doi = {10.1088/0067-0049/217/2/29},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJS..217...29B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
 
