--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -48,7 +48,7 @@
 %\include{preface}
 
 \begin{UTabstract}{Adam Kraus}
-\lipsum[1]
+Binary stars and higher-order multiple systems are a ubiquitous outcome of star formation, especially as the system mass increases. The companion mass-ratio distribution is a unique probe into the conditions of the collapsing cloud core and circumstellar disk(s) of the binary fragments. Inside $a \sim 1000$ AU the disks from the two forming stars can interact, and additionally companions can form directly through disk fragmentation. We should therefore expect the mass-ratio distribution of close companions to differ from that of wide companions. This prediction is difficult to test with intermediate-mass primary stars using traditional methods because the contrast ratios that would be required to detect low-mass companions at narrow working angles are not yet achievable. In this thesis, we present a spectroscopic method to detect and characterize close companions to a variety of stars. We demonstrate applications of the method to detection of stars and even planets around sun-like stars, and present the results of a survey searching for companions to A- and B-type stars. As part of the survey, we estimate the temperatures and surface gravity of most of the 341 sample stars, and derive their masses and ages. We additionally estimate the temperatures and masses of the 64 companions we find, 23 of which are new detections. We find that the mass-ratio distribution for our sample has a maximum near $q \sim 0.3$. Our mass-ratio distribution has a very different form than in previous work, where it is usually well-described by a power law, and indicates that close companions to intermediate-mass stars experience significantly different accretion histories or formation mechanisms than wide companions.
 \end{UTabstract}
 
 
