Added dedication and acknowledgements.

--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -44,6 +44,19 @@
 
 \setcounter{page}{4}
 
+\begin{UTdedication}
+Dedicated to my loving parents, who encouraged my exploration of science from an early age.
+\end{UTdedication}
+
+\begin{UTacknowledgements}
+I would like to start by thanking everyone who served as a supervisor during part of my thesis. Mike Endl served as my co-supervisor for two years, taught me how to observe on the 2.7m telescope at McDonald observatory, and involved me in the planet search program for the last 5 years. That experience provided many interesting nights, a fun "side project", and gave me the confidence to do much of the observing for my main survey program. Sally Dodson-Robinson served as my thesis supervisor for my first two years. She gave me a great deal of independence in my project, while providing valuable feedback. I would like to thank both her and my current supervisor, Adam Kraus, for nominating me for several UT fellowships and funding me as a research assistant during much of my graduate career. The freedom to work exclusively on research has been invaluable, and facilitated much of the progress that I made. Adam, thank you for being a great advisor. Despite being brand new at this, you provide a great mix of a hands-on style when I need it and hands-off when I don't, and have been nothing but supportive in every way. 
+
+I would also like to thank Rob Robinson, my committee member, for numerous discussions on statistical methods both while planning and analyzing the results of my survey program. Discussions with you, not to mention your excellent data analysis class, have really helped me to think of statistical methods in a way that makes sense.
+
+Finally, I would like to thank all of my friends and colleagues at UT for making these last years so much fun. From the usual crowd at Crown to cookouts at Paul's to boat parties and volleyball with Tom Montemayor, I have rarely lacked for a way to blow off some steam and relax in between the stressful moments. And of course, I would like to thank my girlfriend Cori Norman. You have made the last three years absolutely wonderful.
+
+\end{UTacknowledgements}
+
 %\include{acknowledgements}
 %\include{preface}
 
